--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
             </div>
 
-            <div class="row top-small-spacer bottom-small-spacer visible-phone">
+            <div class="row top-small-spacer bottom-med-spacer visible-phone">
                 <div class="row">
                     <div class="span2" style="text-align:right;">
                         <a href="#Games" style="margin-right:0px">Games</a>
@@ -87,7 +87,7 @@
                 </div>
             </div>
 
-            <div class="row bottom-large-spacer top-med-spacer hidden-phone">
+            <div class="row bottom-large-spacer hidden-phone">
                 <div class="span12 top-small-spacer" align="center">
                     <a href="http://kfv.ko-opmode.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'KFV']);" ><img alt="Kung Fu Volleyball. Play Now" src="/images/playnow.png" class="ignore-resize"/></a>
                 </div>
