fixed link typo

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
             <div class="row top-small-spacer">
                 <div class="span12">
-                    <a href="http://kf.ko-opmode.com" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'KFV']);" ><img alt="KFV Banner" src="/images/KFVbanner.png" class="ignore-resize"/></a>
+                    <a href="http://kfv.ko-opmode.com" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'KFV']);" ><img alt="KFV Banner" src="/images/KFVbanner.png" class="ignore-resize"/></a>
                 </div>
             </div>
             <div class="row top-small-spacer">
