Fixed link trackign on contact us

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 </div>
                 <div align="right" class="span12">
                     <p><a href="http://presskit.ko-opmode.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Presskit']);" class="presskit">presskit</a></p>
-                    <p><a href="mailto:contact@ko-opmode.com" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Presskit']);" class="email">Contact Us</a></p>
+                    <p><a href="mailto:contact@ko-opmode.com" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Contact']);" class="email">Contact Us</a></p>
                     <p class="copy">Copyright 2013 KO-OP Mode inc.</p>
                 </div>
             </div>
@@ -186,7 +186,7 @@
                     <p><strong>KO-OP Mode</strong> is a label for independent game developers out of Montréal, Québec. KO-OP brings together designers of all stripes and sensibilities in one place to jam on both personal projects and group collaborations,<strong>with an emphasis on experimentation in design, aesthetics, and narrative</strong>.</p></div>
                 <div align="right" class="span3 top-small-spacer">
                     <p><a href="http://presskit.ko-opmode.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Presskit']);" class="presskit">presskit</a></p>
-                    <p><a href="mailto:contact@ko-opmode.com" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Presskit']);" class="email">Contact Us</a></p>
+                    <p><a href="mailto:contact@ko-opmode.com" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Contact']);" class="email">Contact Us</a></p>
                     <p class="copy">Copyright 2013 KO-OP Mode inc.</p>
                 </div>
             </div>
