Fixed phone mailing list subscription

--- a/index.html
+++ b/index.html
@@ -143,26 +143,26 @@
                 <div align="center" class="span12 hidden-phone">
                     <h1>Be the first to know about all KO-OP Games</h1>
                     <h3>with early access to prototypes, free music, and other goodies</h3>
-                    <form accept-charset="UTF-8" action="mailing_list/subscribe" class="mail-form" data-remote="true" id="mail-form" method="post">
-                        <input class="textfield" id="email" name="email" placeholder="Email" type="text" />
-                        <input class="subscribe" name="commit" type="submit" value="Subscribe" />
-                        <div style="height:20px" id="response">
+                    <form accept-charset="UTF-8" action="mailing_list/subscribe_general" class="mail-form" data-remote="true" id="general-mail-form" method="post">
+                        <input class="textfield" id="email" name="email" placeholder="Email" type="text"/>
+                        <input class="subscribe" name="general_subscribe" type="submit" value="Subscribe" style="margin-bottom:9px" />
+                        <div style="height:35px" id="general-response">
                         </div>
                     </form>
-                        <div class="fb-like" data-href="https://www.facebook.com/koopmode" data-send="false" data-layout="button_count" data-width="150" data-show-faces="false" data-font="verdana"></div> 
-                        <div class="top-xsmall-spacer"><a href="https://twitter.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Social', 'click', 'FollowTwitter']);" class="twitter-follow-button" data-show-count="false">Follow @koopmode</a></div>
+                    <div class="fb-like" data-href="https://www.facebook.com/koopmode" data-send="false" data-layout="button_count" data-width="150" data-show-faces="false" data-font="verdana"></div> 
+                    <div class="top-xsmall-spacer"><a href="https://twitter.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Social', 'click', 'FollowTwitter']);" class="twitter-follow-button" data-show-count="false">Follow @koopmode</a></div>
                 </div>
                 <!-- Phone mailing list -->
                 <div align="center" class="span12 visible-phone">
                     <h1 align="center">Be the first to know about all KO-OP Games</h1>
-                    <form accept-charset="UTF-8" action="mailing_list/subscribe" class="mail-form" data-remote="true" id="mail-form" method="post">
-                        <input class="textfield" id="email" name="email" placeholder="Email" type="text" />
-                        <input class="subscribe" name="commit" type="submit" value="Subscribe" />
-                        <div style="height:20px" id="response">
+                     <form accept-charset="UTF-8" action="mailing_list/subscribe_general" class="mail-form" data-remote="true" id="general-mail-form-phone" method="post">
+                        <input class="textfield" id="email" name="email" placeholder="Email" type="text"/>
+                        <input class="subscribe" name="general_subscribe" type="submit" value="Subscribe" style="margin-bottom:9px" />
+                        <div style="height:35px" id="general-response-phone">
                         </div>
-                    </form>
-                        <div class="fb-like" data-href="https://www.facebook.com/koopmode" data-send="false" data-layout="button_count" data-width="150" data-show-faces="false" data-font="verdana"></div> 
-                        <div class="top-xsmall-spacer"><a href="https://twitter.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Social', 'click', 'FollowTwitter']);" class="twitter-follow-button" data-show-count="false">Follow @koopmode</a></div>
+                    </form>                   
+                    <div class="fb-like" data-href="https://www.facebook.com/koopmode" data-send="false" data-layout="button_count" data-width="150" data-show-faces="false" data-font="verdana"></div> 
+                    <div class="top-xsmall-spacer"><a href="https://twitter.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Social', 'click', 'FollowTwitter']);" class="twitter-follow-button" data-show-count="false">Follow @koopmode</a></div>
                 </div>
         </div>
     </div>
