--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>KO-OP Mode - Experimental Game Collective</title>
     <meta content="authenticity_token" name="csrf-param" />
     <meta content="tQiVCeewt5ttIjE+Yz3DkgNRfA4kahOv8KdS/nnmn04=" name="csrf-token" />
+    <meta property="fb:admins" content="13616068" />
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
