--- a/index.html
+++ b/index.html
@@ -193,5 +193,7 @@
   ga('send', 'pageview');
 
 </script>
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="/javascripts/jquery_ujs.js" type="text/javascript"></script>
   </body>
 </html>
