--- a/index.html
+++ b/index.html
@@ -195,5 +195,6 @@
 </script>
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="/javascripts/jquery_ujs.js" type="text/javascript"></script>
+    <script src="/javascripts/static_pages.js" type="text/javascript"></script>
   </body>
 </html>
