Fixed image link

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
       <a href="http://tag.hexagram.ca"><img src="/images/tag.png" height="80px" class="right-small-spacer"></a>
       <a href="http://hexagram.concordia.ca"><img src="/images/hexagram.png" height="80px" class="right-small-spacer"></a>
-      <a href="http://mlabgames.com"><img src="/images/mlab.png" height="50px" class="right-small-spacer"></a>
+      <a href="http://mlabgames.com"><img src="/images/mLab.png" height="50px" class="right-small-spacer"></a>
       <a href="http://criticalhitmontreal.ca"><img src="/images/critical.png" height="80px"></a>
         
       </div>
