Changed font size

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <input class="textfieldphone" id="email" name="email" placeholder="Email..." type="text"/>
          </div>
           <input class="subscribephone" name="general_subscribe" type="submit" value="Subscribe" style="margin-bottom:9px" />
-          <div style="height:10px" id="response-phone"></div>
+          <div style="height:10px" id="response-phone" style="font-size:12px;"></div>
         </form>
       </div>
       <div class="col-lg-5 col-lg-offset-1 top-small-spacer bottom-small-spacer" align="left">
