removed some youtube junk

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
            <div onclick="thevid=document.getElementById('thevideo'); thevid.style.display='block'; this.style.display='none'; document.getElementById('iframe').src = document.getElementById('iframe').src.replace('autoplay=0','autoplay=1'); ">
            <img src="/images/videoImage.png"  class="img-responsive  bottom-large-spacer" style="cursor:pointer" /></div>
            <div class="flex-video widescreen" id="thevideo" style="display:none">
-           <iframe id="iframe"  src="//www.youtube.com/embed/DKwQQM5Nm-Y?vq=hd720&autoplay=0&showinfo=0&controls=2&rel=0" frameborder="0" allowscriptaccess="always" allowfullscreen="true"></iframe>
+           <iframe id="iframe"  src="//www.youtube.com/embed/DKwQQM5Nm-Y?autoplay=0&showinfo=0&controls=2&rel=0" frameborder="0" allowscriptaccess="always" allowfullscreen="true"></iframe>
            </div>
            </div>
       <div class="col-xs-12 hidden-xs bottom-small-spacer" align="center">
