updated share image name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="Description" content="KO-OP is a game collective creating unique and experimental games. Check out Skipping Stones, GNAH! and more games by us.">
     <meta property="og:title" content="KO-OP Mode" />
     <meta property="og:site_name" content="KO-OP - Experimental Game Collective"/>
-    <meta property="og:image" content="http://ko-opmode.com/images/facebookshare.png" />
+    <meta property="og:image" content="http://ko-opmode.com/images/share.png" />
     <meta property="og:description" content="KO-OP Mode is a Montreal based collective of game developers working both independently and together to create unique and experimental games" />
     <meta property="og:url" content="http://www.ko-opmode.com/">
     <meta property="og:type" content="website">
@@ -17,7 +17,7 @@
     <meta name="twitter:creator" content="@koopmode">
     <meta name="twitter:title" content="KO-OP Mode">
     <meta name="twitter:description" content="KO-OP Mode is a Montreal based collective of game developers working both independently and together to create unique and experimental games.">
-    <meta name="twitter:image:src" content="http://ko-opmode.com/images/facebookshare.jpg">
+    <meta name="twitter:image:src" content="http://ko-opmode.com/images/share.png">
     <!-- Bootstrap -->
     <link href="/stylesheets/normalize.css?body=1" media="all" rel="stylesheet" type="text/css" />
     <link href="/stylesheets/bootstrap.min.css?body=1" media="all" rel="stylesheet" type="text/css" />
