fixed mistakes in text and testing new og image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="Description" content="KO-OP is a game collective creating unique and experimental games. Check out Please Don't, Spacedog! GNAH! Spacedog, and more games by us.">
     <meta property="og:title" content="KO-OP Mode" />
     <meta property="og:site_name" content="KO-OP - Experimental Game Collective"/>
-    <meta property="og:image" content="http://ko-opmode.com/images/share2.png" />
+    <meta property="og:image" content="http://ko-opmode.com/images/facebookshare.png" />
     <meta property="og:description" content="KO-OP is a Montreal based collective of game developers working both independently and together to create unique and experimental games" />
     <meta property="og:url" content="http://ko-opmode.com/">
     <meta property="og:type" content="game">
@@ -64,12 +64,12 @@
     <div class="row">
       <div class="col-xs-12 hidden-xs bottom-small-spacer" align="center">
         <p class="h1">GNAH!</p>
-        <p class="bold" align="center">A new KO-OP game coming to Steam<br>for PC Mac Linux <a href="http://gnah.ko-opmode.com">Visit the website</a></p>    
+        <p class="bold" align="center">A new KO-OP game coming to Steam<br>for PC, Mac, & Linux <a href="http://gnah.ko-opmode.com">Visit the website</a></p>    
       </div>
       <!-- Phone -->
             <div class="col-xs-12 visible-xs" align="center">
            <p><span class="h1phone">GNAH!</span></p>
-        <p class="boldphone">A new KO-OP game coming in 2014 for PC Mac Linux & Ouya. <a href="http://gnah.ko-opmode.com">Visit the website</a></p>    
+        <p class="boldphone">A new KO-OP game coming to Steam for PC, Mac, & Linux <a href="http://gnah.ko-opmode.com">Visit the website</a></p>    
       </div>
     </div>
   </div>
