fixed broken link

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
        <a href="http://www.flyredrover.com" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'RedRover']);" ><img alt="Red Rover banner" src="/images/redroverbanner.png" class="grow img-responsive"/></a>
        </div>
         <div class="col-md-6 nopadding">
-         <a href="http:/facerift.ko-opmode.com" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'facerift']);"><img src="/images/facerift.png" alt="facerift" class="grow img-responsive"></a>
+         <a href="http://facerift.ko-opmode.com" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'facerift']);"><img src="/images/facerift.png" alt="facerift" class="grow img-responsive"></a>
        </div>
         <div class="col-md-6 nopadding">
          <a href="https://www.youtube.com/watch?v=G3QrhdfLCO8" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'eagle']);"><img src="/images/teaser.png" alt="facerift" class="grow img-responsive"></a>
