Fixed broken link, added new floating GNAH header

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!-- Video/Header -->
         <div class="col-xs-10 col-xs-offset-1" align="center">
            <div onclick="thevid=document.getElementById('thevideo'); thevid.style.display='block'; this.style.display='none'; document.getElementById('iframe').src = document.getElementById('iframe').src.replace('autoplay=0','autoplay=1'); ">
-           <img src="/images/videoImage.png" class="img-responsive  bottom-large-spacer" style="cursor:pointer" /></div>
+           <img src="/images/newgnahvideo.png" class="hover img-responsive  bottom-large-spacer" style="cursor:pointer" /></div>
            <div class="flex-video widescreen"  id="thevideo" style="display:none">
            <iframe id="iframe"  src="//www.youtube.com/embed/DKwQQM5Nm-Y?autoplay=0&showinfo=0&controls=2&rel=0" frameborder="0" allowscriptaccess="always" allowfullscreen="true"></iframe>
            </div>
@@ -117,7 +117,7 @@
          <a href="https://www.youtube.com/watch?v=G3QrhdfLCO8" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'eagle']);"><img src="/images/teaser.png" alt="facerift" class="grow img-responsive"></a>
        </div>
        <div class="col-md-12 nopadding">
-         <a href="http:/workshops.ko-opmode.com" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'workshops']);"><img src="/images/workshops.png" alt="workshops" class="grow img-responsive"></a>
+         <a href="http://workshops.ko-opmode.com" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'workshops']);"><img src="/images/workshops.png" alt="workshops" class="grow img-responsive"></a>
        </div>
     </div>
   </div>
