--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
          <a href="https://www.youtube.com/watch?v=G3QrhdfLCO8" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'eagle']);"><img src="/images/teaser.png" alt="facerift" class="grow img-responsive"></a>
        </div>
        <div class="col-md-12 nopadding">
-         <a href="http:/workshops.ko-opmode.com" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'workshops']);"><img src="/images/workshops.png" alt="workshops" class="grow img-responsive"></a>
+         <a href="http://workshops.ko-opmode.com" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'workshops']);"><img src="/images/workshops.png" alt="workshops" class="grow img-responsive"></a>
        </div>
     </div>
   </div>
