fixed stupid mistake

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
        </div>
       <div class="col-md-12 nopadding">
-         <a href="https://www.youtube.com/watch?v=G3QrhdfLCO8" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'eagle']);"><img src="/images/fledge.png" alt="facerift" class="grow img-responsive"></a>
+         <a href="http://fledge.ko-opmode.com" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'fledge']);"><img src="/images/fledge.png" alt="facerift" class="grow img-responsive"></a>
        </div>
         <div class="col-md-6 nopadding">
         <a href="http://www.skippingstonesgame.com" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'SkippingStones']);" ><img alt="Skipping Stones Banner" src="/images/skipping.gif" class="grow img-responsive"/></a>
