fixed broken link

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
     <div class="row">
       <div class="col-xs-12 hidden-xs bottom-small-spacer" align="center">
         <p class="h1">GNOG</p>
-        <p class="bold" align="center">A new KO-OP game coming to Steam<br>for PC, Mac, & Linux <a href="http://gnog.ko-opmode.com">Visit the website</a></p>    
+        <p class="bold" align="center">A new KO-OP game coming to Steam<br>for PC, Mac, & Linux <a href="http://www.gnoggame.com">Visit the website</a></p>    
       </div>
       <!-- Phone -->
             <div class="col-xs-12 visible-xs" align="center">
            <p><span class="h1phone">GNOG</span></p>
-        <p class="boldphone">A new KO-OP game coming to Steam for PC, Mac, & Linux <a href="http://gnog.ko-opmode.com">Visit the website</a></p>    
+        <p class="boldphone">A new KO-OP game coming to Steam for PC, Mac, & Linux <a href="http://www.gnoggame.com">Visit the website</a></p>    
       </div>
     </div>
   </div>
