--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 top-large-spacer bottom-large-spacer" align="">
-        <p><span id="highlight">KO-OP</span> is a collective of game makers. We make weird and beautiful games.</p>
+        <p><span id="highlight">KO-OP</span> is a collective of game makers. We make strange and beautiful games.</p>
       </div>
     </div>
   </div>
