replaced mailing list form with link to mailchimp

--- a/games.html
+++ b/games.html
@@ -251,11 +251,12 @@
       <div class="col-xs-5 col-sm-offset-2">
         <p class="h1"><span class="footer">JOIN THE MAILING LIST</span></p>
         <p>Recieve a once in a while newsletters about KO-OP</p>
-         <form align="left" accept-charset="UTF-8" action="mailing_list/subscribe_general" class="mail-form" data-remote="true" id="general-mail-form" method="post">
+        <a  class="subscribe" href="http://eepurl.com/vqHVn">Subscribe!</a>
+       <!--   <form align="left" accept-charset="UTF-8" action="mailing_list/subscribe_general" class="mail-form" data-remote="true" id="general-mail-form" method="post">
           <input class="textfield" id="email" name="email" placeholder=" Email..." type="text"/>
           <input class="btn-primary" name="general_subscribe" type="submit" value="Subscribe" style="margin-bottom:9px" />
             <div style="height:35px" id="general-response"></div>
-          </form>
+          </form> -->
       </div>
     </div>
   </div>
