fixed links on games page

--- a/games.html
+++ b/games.html
@@ -113,8 +113,9 @@
                     <p>Gardenarium is a chill adventure taking place on a cloud in the sky.</p>
                     <div class="link-wrapper">
                       <!-- <a href="/kolab"><img src="/images/kolab-logo.png" class="bottom-small-spacer img-responsive" width="165px"></a> -->
+                 
+                      <p><a class="btn btn-default btn-lg" href="/gardenarium">Visit the website</a></p>     
                       <p><a class="popup-youtube btn btn-default btn-lg" href="https://www.youtube.com/watch?v=yL3wUm_aUig">Watch the trailer</a></p>
-                      <p><a class="btn btn-default btn-lg" href="/gardenarium">Visit the website</a></p>
                       <!-- <p><a class="btn btn-default btn-lg">Watch the trailer</a></p> -->
                     </div>
                   </div>
@@ -128,7 +129,7 @@
                     <p class="h5 bottom-xsmall-spacer">By Bronson Zgeb, GP Lackey, & KO-OP Mode</p>
                     <p>Spacedog! is an exhibition only Oculus VR game controlled by an AKAI LPD8.</p>
                     <div class="link-wrapper">
-                      <p><a class="btn btn-default btn-lg" href="http://www.gnoggame.com">Visit the website</a></p>
+                      <p><a class="btn btn-default btn-lg" href="http://spacedog.ko-opmode.com">Visit the website</a></p>
                       <!-- <p><a class="btn btn-default btn-lg">Watch the trailer</a></p> -->
                     </div>
                   </div>
@@ -195,7 +196,7 @@
                     <p class="h5 bottom-xsmall-spacer">By Bronson Zgeb, GP Lackey, & KO-OP Mode</p>
                     <p>Strap on an Oculus VR Headset and dive into the world of Facebook.</p>
                     <div class="link-wrapper">
-                      <p><a class="btn btn-default btn-lg" href="http://www.gnoggame.com">Visit the website</a></p>
+                      <p><a class="btn btn-default btn-lg" href="http://facerift.ko-opmode.com">Visit the website</a></p>
                       <p><a class="btn btn-default btn-lg" href="http://www.theverge.com/2014/3/27/5553534/the-oculus-rift-facebook-of-tomorrow-is-here-today">The Verge's Take</a></p>
                     </div>
                   </div>
