--- a/gardenarium.html
+++ b/gardenarium.html
@@ -83,7 +83,7 @@
         <div class="col-sm-4">
           <p class="h1">About the Game</p>
           <p>Gardenarium is a chill adventure taking place on a cloud in the sky. You land as a stranger and struggle to gain access to the mysterious Depot by picking up trash and making the land grow.</p>
-          <p>Gardenarium is made by <a href="http://www.palomadawkins.ca">Paloma Dawkins</a> with the support of <a href="http://www.ko-opmode.com">KO-OP</a>. Music by <a href="https://ylangylang.bandcamp.com">Ylang Ylang</a></p>
+          <p>Gardenarium is made by <a href="http://www.palomadawkins.ca">Paloma Dawkins</a> and <a href="https://twitter.com/kylerwk">Kyler Kelly</a> with the support of <a href="http://www.ko-opmode.com">KO-OP</a>. Music by <a href="https://ylangylang.bandcamp.com">Ylang Ylang</a>.</p>
         </div>
         <div class="col-sm-4 col-sm-offset-2">
           <p class="h1">Pre Order</p>
