added twitter card support

--- a/gardenarium.html
+++ b/gardenarium.html
@@ -13,10 +13,10 @@
     <meta property="fb:admins" content="13616068" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@koopmode">
-    <meta name="twitter:creator" content="@koopmode">
+    <meta name="twitter:creator" content="@Palomadawkins">
     <meta name="twitter:title" content="Gardenarium">
-    <meta name="twitter:description" content="Gardenarium is a chill adventure taking place on a cloud in the sky.">
-    <meta name="twitter:image:src" content="">
+    <meta name="twitter:description" content="Gardenarium is a chill adventure taking place on a cloud in the sky. Out now!">
+    <meta name="twitter:image:src" content="http://www.ko-opmode.com/images/gardenarium.png">
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <!-- Typekit -->
