added Facebook tags

--- a/gardenarium.html
+++ b/gardenarium.html
@@ -6,9 +6,9 @@
     <meta name="Description" content="Gardenarium is a chill adventure taking place on a cloud in the sky.">
     <meta property="og:title" content="Gardenarium" />
     <meta property="og:site_name" content="Gardenarium"/>
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="http://www.ko-opmode.com/images/gardenarium.png" />
     <meta property="og:description" content="Gardenarium is a chill adventure taking place on a cloud in the sky." />
-    <meta property="og:url" content="">
+    <meta property="og:url" content="http://ko-opmode.com/gardenarium">
     <meta property="og:type" content="">
     <meta property="fb:admins" content="13616068" />
     <meta name="twitter:card" content="summary_large_image">
