--- a/gardenarium.html
+++ b/gardenarium.html
@@ -86,7 +86,7 @@
           <p>Gardenarium is made by <a href="http://www.palomadawkins.ca">Paloma Dawkins</a> and <a href="https://twitter.com/kylerwk">Kyler Kelly</a> with the support of <a href="http://www.ko-opmode.com">KO-OP</a>. Music by <a href="https://ylangylang.bandcamp.com">Ylang Ylang</a>.</p>
         </div>
         <div class="col-sm-4 col-sm-offset-2">
-          <p class="h1">Pre Order</p>
+          <p class="h1">Get it</p>
           <iframe width='550' height='264' scrolling='no' frameBorder='0' style='border:none;' src='https://www.humblebundle.com/store/product/gardenarium/33SDFlk2h3'></iframe>
         </div>   
         <div class="clearfix"></div>
