--- a/gardenarium.html
+++ b/gardenarium.html
@@ -84,10 +84,17 @@
           <p class="h1">About the Game</p>
           <p>Gardenarium is a chill adventure taking place on a cloud in the sky. You land as a stranger and struggle to gain access to the mysterious Depot by picking up trash and making the land grow.</p>
           <p>Gardenarium is made by <a href="http://www.palomadawkins.ca">Paloma Dawkins</a> and <a href="https://twitter.com/kylerwk">Kyler Kelly</a> with the support of <a href="http://www.ko-opmode.com">KO-OP</a>. Music by <a href="https://ylangylang.bandcamp.com">Ylang Ylang</a>.</p>
+          <div class="bottom-xsmall-spacer"></div>
+          <p>-<a href="http://presskit.ko-opmode.com/sheet.php?p=gardenarium">Presskit & Contact</a></p>
+          <p>-Follow Paloma: <a href="https://twitter.com/palomadawkins" class="twitter-follow-button" data-show-count="false">Follow @palomadawkins</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script> </p>
+          <p>-Follow KO-OP: <a href="https://twitter.com/KOOPmode" class="twitter-follow-button" data-show-count="false">Follow @KOOPmode</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script> </p>
         </div>
         <div class="col-sm-4 col-sm-offset-2">
           <p class="h1">Get it</p>
           <iframe width='550' height='264' scrolling='no' frameBorder='0' style='border:none;' src='https://www.humblebundle.com/store/product/gardenarium/33SDFlk2h3'></iframe>
+          <iframe src="//itch.io/embed/25393" width="552" height="167" frameborder="0"></iframe>
         </div>   
         <div class="clearfix"></div>
         <div class="col-sm-12 image-gallery bottom-small-spacer">
