Fixes for mobile layout

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <meta name="twitter:creator" content="@koopmode">
     <meta name="twitter:title" content="KO_OP Mode">
     <meta name="twitter:description" content="KO_OP Mode is a Montreal based collective of game developers working both independently and together to create unique and experimental games.">
-    <meta name="twitter:image:src" content="http://ko-opmode.com/images/facebookshare.jpg">
+    <meta name="twitter:image:src" content="http://ko-opmode.com/images/share.png">
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <!-- Typekit -->
@@ -225,7 +225,7 @@
       <a href="http://mlabgames.com"><img src="/images/mLab.png" height="30px" class="right-small-spacer"></a>
       <a href="http://criticalhitmontreal.ca"><img src="/images/critical.png" height="40px"></a> -->
    
-     <button class="hvr-sweep-to-right btn btn-custom" id="green"><a href="https://www.facebook.com/koopmode">FACEBOOK</a></button><button class="hvr-grow btn btn-custom" id="red">  <a href="https://twitter.com/koopmode">TWITTER</a></button><button class="hvr-grow btn btn-custom" id="pink">  <a href="mailto:contact@ko-opmode.com">EMAIL</a></button><button class="hvr-grow btn btn-custom" id="blue">  <a href="http://presskit.ko-opmode.com">PRESSKIT</a></button>
+     <button class="hidden-xs btn btn-custom" id="green"><a href="https://www.facebook.com/koopmode">FACEBOOK</a></button><button class="hvr-grow btn btn-custom" id="red">  <a href="https://twitter.com/koopmode">TWITTER</a></button><button class="hvr-grow btn btn-custom" id="pink">  <a href="mailto:contact@ko-opmode.com">EMAIL</a></button><button class="hvr-grow btn btn-custom" id="blue">  <a href="http://presskit.ko-opmode.com">PRESSKIT</a></button>
 
         
       </div> 
