--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 hidden-xs" align="center">
-        <a href="/games" class="btn btn-custom" id="green">GAMES</a><!-- <a href="/kolab" class="btn btn-custom" id="yellow" >KOLAB</a> --><a class="btn btn-custom" id="pink" href="/workshops">WORKSHOPS</a><a class="btn btn-custom" id="red" href="https://medium.com/@KO_OP">BLOG</a><a class="btn btn-custom" id="blue" href="/about">ABOUT</a>
+        <a href="/games" class="btn btn-custom" id="green">GAMES</a><!-- <a href="/kolab" class="btn btn-custom" id="yellow" >KOLAB</a> --><a class="btn btn-custom" id="red" href="https://medium.com/@KO_OP">BLOG</a><a class="btn btn-custom" id="pink" href="/workshops">WORKSHOPS</a><a class="btn btn-custom" id="blue" href="/about">ABOUT</a>
       </div>
     </div>
   </div>
