--- a/workshops.html
+++ b/workshops.html
@@ -147,7 +147,7 @@
       <a href="http://mlabgames.com"><img src="/images/mLab.png" height="30px" class="right-small-spacer"></a>
       <a href="http://criticalhitmontreal.ca"><img src="/images/critical.png" height="40px"></a> -->
    
-     <button class=" btn btn-custom" id="green"><a href="https://www.facebook.com/koopmode">FACEBOOK</a></button><button class=" btn btn-custom" id="red">  <a href="https://twitter.com/koopmode">TWITTER</a></button><button class=" btn btn-custom" id="pink">  <a href="mailto:contact@ko-opmode.com">EMAIL</a></button><button class="btn btn-custom" id="blue">  <a href="http://presskit.ko-opmode.com">PRESSKIT</a></button>
+     <button class="hidden-xs btn btn-custom" id="green"><a href="https://www.facebook.com/koopmode">FACEBOOK</a></button><button class=" btn btn-custom" id="red">  <a href="https://twitter.com/koopmode">TWITTER</a></button><button class=" btn btn-custom" id="pink">  <a href="mailto:contact@ko-opmode.com">EMAIL</a></button><button class="btn btn-custom" id="blue">  <a href="http://presskit.ko-opmode.com">PRESSKIT</a></button>
 
         
       </div> 
