updated twitter meta tag to try to fix image issue

--- a/workshops.html
+++ b/workshops.html
@@ -16,7 +16,7 @@
     <meta name="twitter:creator" content="@koopmode">
     <meta name="twitter:title" content="KO_OP - Workshops">
     <meta name="twitter:description" content="KO_OP is an artist run & owned game making studio. Check out our upcoming game GNOG, releasing for PS4, Steam & iOS.">
-    <meta name="twitter:image:src" content="http://ko-opmode.com/images/share.png">
+    <meta name="twitter:image" content="http://ko-opmode.com/images/share.png">
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
