--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <meta name="twitter:creator" content="@koopmode">
     <meta name="twitter:title" content="KO_OP Mode">
     <meta name="twitter:description" content="KO_OP Mode is a Montreal based collective of game developers working both independently and together to create unique and experimental games.">
-    <meta name="twitter:image:src" content="http://ko-opmode.com/images/share.png">
+    <meta name="twitter:image" content="http://ko-opmode.com/images/share.png">
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <!-- Typekit -->
